--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mermaid": "^11.10.1",
     "multer": "^2.0.2",
     "playwright": "^1.55.0",
     "rehype-highlight": "^7.0.2",
